--- a/www/songbird/tests/acceptance.suite.yml
+++ b/www/songbird/tests/acceptance.suite.yml
@@ -8,10 +8,11 @@ class_name: AcceptanceTester
 modules:
     enabled:
         - WebDriver:
-            url: 'http://songbird.dev'
+            url: 'http://songbird.dev/app_dev.php'
             browser: firefox
             window_size: 1024x768
             capabilities:
                 unexpectedAlertBehaviour: 'accept'
                 webStorageEnabled: true
+
         - \Helper\Acceptance
