--- a/www/songbird/composer.json
+++ b/www/songbird/composer.json
@@ -17,7 +17,8 @@
         "symfony/monolog-bundle": "2.7.1",
         "sensio/distribution-bundle": "4.0.0",
         "sensio/framework-extra-bundle": "3.0.9",
-        "incenteev/composer-parameter-handler": "2.1.1"
+        "incenteev/composer-parameter-handler": "2.1.1",
+	"friendsofsymfony/user-bundle": "~2.0@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "2.5.3",
