--- a/www/songbird/app/config/config.yml
+++ b/www/songbird/app/config/config.yml
@@ -92,4 +92,6 @@ sonata_block:
         # Enable the SonataAdminBundle block
         sonata.admin.block.admin_list:
             contexts:   [admin]
-
+sonata_admin:
+    security:
+        handler: sonata.admin.security.handler.role
