--- a/www/songbird/app/config/security.yml
+++ b/www/songbird/app/config/security.yml
@@ -1,12 +1,14 @@
 security:
-    
     encoders:
         FOS\UserBundle\Model\UserInterface: bcrypt
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
         ROLE_SUPER_ADMIN: ROLE_ADMIN
-
+        ROLE_USER:
+            # in this format: ROLE_service_name_in_underscore_ACTION
+            - ROLE_SONGBIRD_ADMIN_USER_VIEW
+            - ROLE_SONGBIRD_ADMIN_USER_EDIT
     providers:
         in_memory:
             memory: ~
@@ -24,10 +26,12 @@ security:
             form_login:
                 provider: fos_userbundle
                 csrf_provider: security.csrf.token_manager
+                default_target_path: /admin
             logout:       true
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        # We do not allow user registration
+        # - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin/, role: ROLE_ADMIN }
+        - { path: ^/admin/, role: ROLE_USER }
