--- a/www/songbird/composer.json
+++ b/www/songbird/composer.json
@@ -25,7 +25,8 @@
     "require-dev": {
         "sensio/generator-bundle": "2.5.3",
         "codeception/codeception": "2.1.1",
-        "doctrine/doctrine-fixtures-bundle": "2.2.0"
+        "doctrine/doctrine-fixtures-bundle": "2.2.0",
+	"captbaritone/mailcatcher-codeception-module": "1.*"
     },
     "scripts": {
         "post-root-package-install": [
