--- a/www/songbird/app/config/config.yml
+++ b/www/songbird/app/config/config.yml
@@ -95,3 +95,6 @@ sonata_block:
 sonata_admin:
     security:
         handler: sonata.admin.security.handler.role
+    templates:
+        layout: AppBundle:Admin:standard_layout.html.twig
+
