--- a/www/songbird/app/config/routing.yml
+++ b/www/songbird/app/config/routing.yml
@@ -2,6 +2,15 @@ app:
     resource: "@AppBundle/Controller/"
     type:     annotation
 
+# Sonata media routing
+gallery:
+    resource: '@SonataMediaBundle/Resources/config/routing/gallery.xml'
+    prefix: /admin/media/gallery
+
+media:
+    resource: '@SonataMediaBundle/Resources/config/routing/media.xml'
+    prefix: /admin/media
+
 # FOS user bundle default routing
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
