--- a/www/songbird/app/config/config.yml
+++ b/www/songbird/app/config/config.yml
@@ -8,6 +8,7 @@ imports:
 parameters:
     locale: en
     supported_lang: [ 'en', 'fr' ]
+    admin_path: admin
 
 framework:
     #esi:             ~
