--- a/www/songbird/app/config/security.yml
+++ b/www/songbird/app/config/security.yml
@@ -26,7 +26,7 @@ security:
             form_login:
                 provider: fos_userbundle
                 csrf_provider: security.csrf.token_manager
-                default_target_path: /admin
+                default_target_path: /%admin_path%
             logout:       true
 
     access_control:
@@ -34,4 +34,4 @@ security:
         # We do not allow user registration
         # - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin/, role: ROLE_USER }
+        - { path: ^/%admin_path%/, role: ROLE_USER }
