--- a/www/songbird/src/AppBundle/codeception.yml
+++ b/www/songbird/src/AppBundle/codeception.yml
@@ -1,10 +1,10 @@
 actor: Tester
 paths:
-    tests: Tests
-    log: Tests/_output
-    data: Tests/_data
-    support: Tests/_support
-    envs: Tests/_envs
+    tests: tests
+    log: tests/_output
+    data: tests/_data
+    support: tests/_support
+    envs: tests/_envs
 settings:
     bootstrap: _bootstrap.php
     colors: true
@@ -18,4 +18,4 @@ modules:
             dsn: ''
             user: ''
             password: ''
-            dump: Tests/_data/dump.sql
+            dump: tests/_data/dump.sql
