--- a/www/songbird/app/config/config_test.yml
+++ b/www/songbird/app/config/config_test.yml
@@ -7,6 +7,16 @@ framework:
         storage_id: session.storage.mock_file
     profiler:
         collect: false
+    validation:
+       cache: validator.mapping.cache.apc
+    serializer:
+       cache: serializer.mapping.cache.apc
+
+doctrine:
+   orm:
+       metadata_cache_driver: apc
+       result_cache_driver: apc
+       query_cache_driver: apc
 
 web_profiler:
     toolbar: false
