--- a/www/songbird/app/config/routing.yml
+++ b/www/songbird/app/config/routing.yml
@@ -21,9 +21,9 @@ fos_user_resetting:
 # sonata admin
 admin:
     resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
-    prefix: /admin
+    prefix: /%admin_path%
 
 _sonata_admin:
     resource: .
     type: sonata_admin
-    prefix: /admin
+    prefix: /%admin_path%
