--- a/www/songbird/app/config/config.yml
+++ b/www/songbird/app/config/config.yml
@@ -76,6 +76,9 @@ doctrine:
         auto_generate_proxy_classes: "%kernel.debug%"
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        resolve_target_entities:
+            Bpeh\NestablePageBundle\Model\PageBase: AppBundle\Entity\Page
+            Bpeh\NestablePageBundle\Model\PageMetaBase: AppBundle\Entity\PageMeta
 
 # Swiftmailer Configuration
 swiftmailer:
