--- a/www/songbird/app/config/config.yml
+++ b/www/songbird/app/config/config.yml
@@ -77,8 +77,10 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
         resolve_target_entities:
-            Bpeh\NestablePageBundle\Model\PageBase: AppBundle\Entity\Page
-            Bpeh\NestablePageBundle\Model\PageMetaBase: AppBundle\Entity\PageMeta
+            # Bpeh\NestablePageBundle\Model\PageBase: AppBundle\Entity\Page
+            # Bpeh\NestablePageBundle\Model\PageMetaBase: AppBundle\Entity\PageMeta
+            Bpeh\NestablePageBundle\Model\PageBase: MyTest\PageBundle\Entity\Page
+            Bpeh\NestablePageBundle\Model\PageMetaBase: MyTest\PageBundle\Entity\PageMeta
 
 # Swiftmailer Configuration
 swiftmailer:
