--- a/www/songbird/app/config/routing.yml
+++ b/www/songbird/app/config/routing.yml
@@ -1,3 +1,8 @@
+my_test_page:
+    resource: "@MyTestPageBundle/Controller/"
+    type:     annotation
+    prefix:   /mytest
+
 # bpeh_nestable_page:
 #     resource: "@BpehNestablePageBundle/Controller/"
 #     type:     annotation
