--- a/www/songbird/app/config/config.yml
+++ b/www/songbird/app/config/config.yml
@@ -76,17 +76,17 @@ doctrine:
         auto_generate_proxy_classes: "%kernel.debug%"
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
-        resolve_target_entities:
+        # resolve_target_entities:
             # Bpeh\NestablePageBundle\Model\PageBase: AppBundle\Entity\Page
             # Bpeh\NestablePageBundle\Model\PageMetaBase: AppBundle\Entity\PageMeta
-            Bpeh\NestablePageBundle\Model\PageBase: Bpeh\NestablePageBundle\PageTestBundle\Entity\Page
-            Bpeh\NestablePageBundle\Model\PageMetaBase: Bpeh\NestablePageBundle\PageTestBundle\Entity\PageMeta
 
 # bpeh_nestable_page:
-#     page_entity: Bpeh\NestablePageBundle\PageTestBundle\Entity\Page
-#     pagemeta_entity: Bpeh\NestablePageBundle\PageTestBundle\Entity\PageMeta
-#     page_type: Bpeh\NestablePageBundle\PageTestBundle\Form\PageType
-#     pagemeta_type: Bpeh\NestablePageBundle\PageTestBundle\Form\PageMetaType
+#     page_entity: AppBundle\Entity\Page
+#     pagemeta_entity: AppBundle\Entity\PageMeta
+
+# Don't have to worry this part if you are not extending the controller
+#     page_type: AppBundle\Form\PageType
+#     pagemeta_type: AppBundle\Form\PageMetaType
 
 # Swiftmailer Configuration
 swiftmailer:
