--- a/www/songbird/composer.json
+++ b/www/songbird/composer.json
@@ -28,7 +28,9 @@
         "sonata-project/doctrine-orm-admin-bundle": "2.3.2",
         "sonata-project/admin-bundle": "2.3.3",
         "sonata-project/media-bundle": "2.3.2",
-        "bpeh/nestable-page-bundle": ">0.1.0"
+        "bpeh/nestable-page-bundle": ">0.1.0",
+        "egeloen/ckeditor-bundle": "~2.0",
+        "tilleuls/ckeditor-sonata-media-bundle": "1.0.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "2.5.3",
