--- a/www/songbird/composer.json
+++ b/www/songbird/composer.json
@@ -18,7 +18,7 @@
         "sensio/distribution-bundle": "4.0.0",
         "sensio/framework-extra-bundle": "3.0.9",
         "incenteev/composer-parameter-handler": "2.1.1",
-        "friendsofsymfony/user-bundle": "~2.0@dev"
+	"friendsofsymfony/user-bundle": "2.0.0-alpha2"
     },
     "require-dev": {
         "sensio/generator-bundle": "2.5.3",
