--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     },
     "require": {
         "php": ">=5.3.9",
-        "symfony/symfony": "2.7.1",
+        "symfony/symfony": "2.8.*",
         "doctrine/orm": "2.4.7",
         "doctrine/dbal": "2.4.4",
         "doctrine/doctrine-bundle": "1.5.0",
